resolve #12 jsdoc for addEventListener

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,7 @@
       2,
       {
         "ignoreUrls": true,
-        "ignoreComments": false,
+        "ignoreComments": true,
         "ignoreRegExpLiterals": true,
         "ignoreStrings": true,
         "ignoreTemplateLiterals": true
