--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@riversun/event-listener-helper",
   "version": "1.0.0",
-  "description": "Library for strictly managing the addition and deletion of event listeners",
+  "description": "This library allows you to get a list of event listeners attached to the target node, confirms the existence of event listener registered on the target node, deletes all event listeners registered on the target node, registers event listeners with listener name (rather than a reference).",
   "main": "lib/event-listener-helper.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js",
@@ -45,9 +45,7 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
-  "dependencies": {
-    "@riversun/event-emitter": "^1.1.0"
-  },
+  "dependencies": {},
   "directories": {
     "test": "test"
   }
