--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest -i",
     "test:coverage": "npm run test -- --coverage",
     "docs": "run-s jsdoc jsdoc2md",
-    "jsdoc": "npx jsdoc src/event-listener-helper.js -d docs",
+    "jsdoc": "npx jsdoc src/event-listener-helper.js -d docs -t node_modules/minami",
     "jsdoc2md": "jsdoc2md src/event-listener-helper.js > api.md"
   },
   "author": "Tom Misawa <riversun.org@gmail.com> (https://github.com/riversun)",
@@ -39,6 +39,7 @@
     "jest": "^25.1.0",
     "jsdoc": "^3.6.3",
     "jsdoc-to-markdown": "^5.0.3",
+    "minami": "^1.2.3",
     "npm-run-all": "^4.1.5",
     "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.42.0",
