--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
+  codecov: codecov/codecov@1.0.5
 jobs:
   build-and-test:
     executor:
@@ -11,9 +12,8 @@ jobs:
           steps:
             - run: npm install
             - run: npm run test:coverage
-            - run:
-                name: post coverage
-                command: cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
+            - codecov/upload:
+                file:./coverage/lcov.info
 workflows:
     build-and-test:
       jobs:
