--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: npm run test:coverage
+            - run: npm test
             - codecov/upload:
                 file:./coverage/lcov.info
 workflows:
